--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+Library/PackageCache/com.unity.sysroot.linux-x86_64@2.0.2/data~/payload.tar.7z filter=lfs diff=lfs merge=lfs -text
 *.json filter=lfs diff=lfs merge=lfs -text
 *.csproj filter=lfs diff=lfs merge=lfs -text
 *.meta filter=lfs diff=lfs merge=lfs -text
