--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 Library/PackageCache/com.unity.sysroot.linux-x86_64@2.0.2/data~/payload.tar.7z filter=lfs diff=lfs merge=lfs -text
+Library/PackageCache/com.unity.toolchain.win-x86_64-linux-x86_64@2.0.2/data~/payload.tar.7z filter=lfs diff=lfs merge=lfs -text
 *.json filter=lfs diff=lfs merge=lfs -text
 *.csproj filter=lfs diff=lfs merge=lfs -text
 *.meta filter=lfs diff=lfs merge=lfs -text
